update notification part n